Fix: Load dynamic-projects.js instead of simple-projects.js
- simple-projects.js was still loading (using old backend URL)
- Switched to dynamic-projects.js (uses projects.json)
- Now projects will load from JSON file, not backend API

--- a/index.html
+++ b/index.html
@@ -338,6 +338,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="simple-projects.js"></script>
+    <script src="dynamic-projects.js"></script>
 </body>
 </html>
